# quantum_corner_keypoint_detection

./: .gitignore  README.md  config.py  generate_synthetic_data.py  preprocessing.py  qnn_circuit.py  requirements.txt  run_ablation.py  train_qnn.py
data/: feature_dataset.npz  feature_dataset_qnn_subset.npz  patch_dataset.npz  qnn_L1_ring_Z_subset.npz  qnn_L2_linear_ZZ_subset.npz  qnn_L2_none_ZZ_subset.npz  qnn_L2_ring_ZZ_scale_subset.npz  qnn_L2_ring_ZZ_subset.npz  qnn_L2_ring_Z_subset.npz  qnn_L3_ring_Z_subset.npz  qnn_improved_L2_ring_ZZ_scale_more_data_subset.npz  (+3 more)
qpp_corner_qnn_github_package/: .gitignore  AGENTS.md  PACKAGE_CONTENTS.md  README.md  pyproject.toml  qpp_corner_codex_setup_and_prompt.md  requirements.txt
qpp_corner_qnn_github_package/configs/: ablation_full.yaml  ablation_smoke.yaml  full_1q_scalar.yaml  full_2q_lambda12.yaml  full_2q_logS_eta.yaml  smoke_1q_scalar.yaml  smoke_2q_lambda12.yaml  smoke_2q_logS_eta.yaml
qpp_corner_qnn_github_package/data/: README.md
qpp_corner_qnn_github_package/qpp_corner_qnn_hackathon_plan_source/: qpp_corner_toy_qnn.py  qpp_corner_toy_results.txt
qpp_corner_qnn_github_package/scripts/: build_features.py  eval_keypoints.py  inspect_data.py  run_ablation.py  run_experiment.py  tiny_overfit_qnn.py
qpp_corner_qnn_github_package/src/qpp_corner/: __init__.py  classical.py  data.py  experiment.py  features.py  metrics.py  normalizer.py  qnn_torch.py  train.py  viz.py
qpp_corner_qnn_github_package/tests/: test_data_loading.py  test_features.py  test_metrics.py  test_normalizer.py  test_qnn_forward.py
(+474 files in other folders)
