[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qpp-corner-qnn"
version = "0.1.0"
description = "QPP-inspired data-reuploading QNN experiments for patch-level corner detection"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "scikit-learn",
  "pillow",
  "matplotlib",
  "pyyaml",
  "torch",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.pytest_tmp"
